<resources>
    <string name="content_error_msg">contenido nulo</string>
    <string name="vote_canceled_receipt_lbl">recibo de anulación de voto</string>
    <string name="loading_data_msg">cargando datos...</string>
    <string name="wait_msg">por favor, espere</string>
    <string name="sending_data_lbl">enviando datos</string>
    <string name="back_to_cancel_lbl">pulsar \'atrás\' para cancelar</string>
    <string name="voting_closed_lbl">votación cerrada</string>
    <string name="voting_pending_lbl">faltan %1$s horas para abrir</string>
    <string name="voting_open_lbl">faltan %1$s horas para cerrar</string>
    <string name="already_voted_lbl">usted ha elegido en este asunto la opción \'%1$s\'</string>
    <string name="closed_upper_lbl">cerrado</string>
    <string name="author_lbl">publicado por</string>
    <string name="init_lbl">inicio</string>
    <string name="finish_lbl">fin</string>
    <string name="remaining_lbl">%1$s horas para cerrar</string>
    <string name="pending_lbl">%1$s horas para abrir</string>
    <string name="option_selected_msg">seleccionada opción \'%1$s\'</string>
    <string name="voting_system_lbl">sistema de votación</string>
    <string name="access_control_lbl">control de acceso</string>
    <string name="subject_lbl">asunto</string>
    <string name="menuSync">sincronizar</string>
    <string name="processing_lbl">procesando</string>
    <string name="initializing_app_lbl">preparando aplicación</string>
    <string name="publishing_document_msg">publicando documento...</string>
    <string name="loading_info_msg">cargando información, por favor espere</string>
    <string name="pdf_signed_by_lbl">firmado electrónicamente por</string>
    <string name="BACKUP_REQUEST">solicitud de copia de seguridad</string>
    <string name="EVENT_CANCELLATION">cancelar evento</string>
    <string name="operationNotFoundErrorMsg">operación desconocida</string>
    <string name="eventVSDataWithErrors">errores en datos del evento</string>
    <string name="statusCodeNotFoundErrorMsg">falta código de estado</string>
    <string name="errorEmail">debe proporcionar una dirección de correo válida</string>
    <string name="eventVsCancellationDataErrorMsg">error en los datos de cancelación de evento</string>
    <string name="receiverNotFoundErrorMsg">falta el name de destinatario del documento firmado</string>
    <string name="panel_principal_lbl">panel principal</string>
    <string name="search_hint">buscar</string>
    <string name="guardar_recibo_voto_label">guardar recibo</string>
    <string name="remove_receipt_lbl">borrar recibo</string>
    <string name="remove_receipt_msg">¿seguro que desea borrar recibo?</string>
    <string name="search_label"></string>
    <string name="search_msg">realizando búsqueda</string>
    <string name="search_invoke">búsquedas</string>
    <string name="empty_search_lbl">consulta sin resultados</string>
	<string name="pin_for_new_cert_msg">introduzca el código PIN que usará para firmar con el
        certificado, no lo olvide, se le pedirá para completar la instalación en el teléfono una vez
        haya verificado su identidad en un centro autorizado</string>
    <string name="pin_dialog_caption">pin de firma</string>
    <string name="invalidPin">código pin inválido</string>
    <string name="pin_short">código pin debe tener al menos %1$d caracteres</string>
    <string name="enter_pin_import_cert_msg">introduzca el pin que eligió al solicitar el certificado</string>
    <string name="password_mismatch">los códigos pin no coinciden, inténtelo de nuevo</string>
    <string name="repeat_password">vuelva a introducir el código pin</string>
    <string name="givenname_missing_msg">introduzca el nombre</string>
    <string name="surname_missing_msg">introduzca los apellidos</string>
    <string name="searchLabel">buscar</string>
    <string name="app_unstable_msg">la aplicación tiene errores graves, por favor, vuelva a instalarla</string>
    <string name="vote_cert_request_error_msg">no existe ningún certificado de voto</string>
    <string name="operations_lbl">operaciones</string>
    <string name="app_name">votaciones</string>
    <string name="request_cert_msg">tramitando solicitud</string>
    <string name="exception_lbl">excepción</string>
    <string name="cancel_back_msg">pulsar \'atrás\' para cancelar</string>
    <string name="connecting_caption">conectando...</string>
    <string name="getting_representatives_lbl">obteniendo representantes...</string>
    <string name="cert_state_msg">comprobando el estado de la solicitud de certificado</string>
    <string name="cert_downloaded_msg">el certificado de usuario está disponible</string>
    <string name="request_msg_subject">[solicitud acceso - %1$s]</string>
    <string name="vote_msg_subject">[voto]</string>
    <string name="cancel_vote_msg_subject">[anulación de voto]</string>
    <string name="canceled_lbl">anulado</string>
    <string name="cancel_vote_result_msg">su voto para el asunto \'%1$s\' ha sido anulado, puede volver votar de nuevo</string>
    <string name="saved_cancel_vote_recepit_msg">puede encontrar el recibo de la cancelación de este voto en la lista de recibos</string>
    <string name="open_cancel_vote_receipt_lbl">abrir recibo de cancelación</string>
    <string name="pin_error_msg">¿seguro que la contraseña es correcta?</string>
    <string name="sign_send_msg">firmar y enviar</string>
    <string name="select_representative_button">seleccionar como representante</string>
    <string name="voted_lbl">seleccionada opción</string>
    <string name="cancel_vote_lbl">anular voto</string>
    <string name="open_recepit_lbl">abrir recibo</string>
    <string name="cancel_vote_msg">si continua anulará su voto</string>
    <string name="save_receipt_lbl">guardar recibo</string>
    <string name="app_name_lbl">aplicación de votación</string>
    <string name="eventsVS_label">eventos</string>
    <string name="eventVS_label">evento</string>
    <string name="solicitud_csr">solicitud csr</string>
    <string name="enviarVoto">enviar Voto</string>
    <string name="receipt_error_msg">error validando recibo de voto</string>
    <string name="cert_not_found_caption">falta certificado</string>
    <string name="update_lbl">actualizar</string>
    <string name="request_certificate_menu">solicitar certificado</string>
    <string name="receipts_lbl">recibos</string>
    <string name="receipt_list_screen_caption">recibos guardados por el usuario</string>
    <string name="receipt_options_dialog_msg">opciones disponibles para el recibo</string>
    <string name="canceling_vote_caption">anulando voto</string>
    <string name="canceling_access_request_msg">problemas con el servicio, por favor inténtelo mas tarde</string>
    <string name="no_receipts">no tiene guardado ningún recibo</string>
    <string name="options_lbl">opciones</string>
    <string name="uservs_cert_request_activity_text">no dispone de ningún
        certificado con el que poder acceder a los servicios que requieren firma, ¿desea solicitar el certificado?</string>
    <string name="cert_data_confirm_msg"><![CDATA[<b>nombre: </b>%1$s<br/>
        <b>apellidos: </b>%2$s<br/>
        <b>nif: </b>%3$s<br/>
        <b>teléfono móvil: </b>%4$s<br/>
        <b>email: </b>%5$s<br/>]]></string>
    <string name="request_cert_result_activity"><![CDATA[para poder votar necesita tener
        instalado un certificado<br/><br/>usted ya ha solicitado el certificado, ahora hace falta verificar
        su identidad, para ello puede presentarse en cualquiera de <br/><br/>
        <a href="%1$s"> las siguientes direcciones</a>]]></string>
    <string name="search_query_info_msg"><![CDATA[<b>resultado de la busqueda</b>: %1$s]]></string>
    <string name="access_request_repeated_msg"><![CDATA[usted ya ha votado en el asunto \'%1$s\']]></string>
    <string name="access_request_repeated_caption">error, voto repetido</string>
    <string name="access_request_repeated_url_msg"><![CDATA[
        <a href="%1$s">Pulse aquí</a> para acceder a la solicitud que le impide volver a votar sobre este asunto]]></string>
    <string name="cert_install_error_msg">error instalando certificado de usuario</string>
    <string name="cert_required_error_msg">para acceder al servicio necesita tener instalado un certificado de usuario</string>
    <string name="request_cert_result_activity_ok">el certificado se ha importado correctamente</string>
    <string name="request_cert_again_button">volver a solicitar el certificado</string>
    <string name="install_cert_button">instalar el certificado</string>
    <string name="go_app_button">ir a la aplicación</string>
    <string name="request_cert_again_msg"><![CDATA[si vuelve a solicitar el certificado deberá personarse
        en las instalaciones que se le indiquen para verificar su identidad.<br/>
        ¿desea continuar?]]></string>
    <string name="request_cert_verification_msg"><![CDATA[para completar el procedimiento deberá personarse
        en las instalaciones de la policía para verificar su identidad]]></string>
    <string name="documents_lbl">documentos</string>
    <string name="request_user_cert_error_msg">error comprobando el estado de la solicitud, ¿se ha personado
        en las instalaciones de la policía para verificar su identidad?</string>
    <string name="cancel_lbl">cancelar</string>
    <string name="continue_lbl">continuar</string>
    <string name="request_lbl">solicitar</string>
    <string name="nif_lbl">introduzca su nif</string>
    <string name="given_name_lbl">nombre</string>
    <string name="close_app_lbl">cerrar aplicación</string>
    <string name="send_msg_lbl">enviar mensaje</string>
    <string name="delete_lbl">borrar</string>
    <string name="payment_options_lbl">opciones de pago</string>
    <string name="update_signers_info_lbl">actualizar datos</string>
    <string name="wallet_lbl">monedero</string>
    <string name="phone_lbl">teléfono móvil</string>
    <string name="mail_lbl">correo electrónico</string>
    <string name="polls_lbl">votaciones</string>
    <string name="description_debug">debug and tests</string>
    <string name="navdrawer_item_settings">ajustes</string>
    <string name="user_cert_lbl">certificado de usuario</string>
    <string name="add_tag_lbl">añadir etiqueta</string>
    <string name="currency_accounts_lbl">cuentas</string>
    <string name="currency_lbl">divisa</string>
    <string name="change_pin">cambiar pin de firma</string>
    <string name="qr_create_lbl">crear QR</string>
    <string name="currency_prompt">moneda</string>
    <string name="about_msg">información sobre la aplicación</string>
    <string name="connect_lbl">conectar</string>
    <string name="contacts_lbl">contactos</string>
    <string name="qr_codes_lbl">códigos QR</string>
    <string name="address_lbl">dirección</string>
    <string name="postal_code_lbl">código postal</string>
    <string name="location_lbl">localidad</string>
    <string name="province_lbl">provincia</string>
    <string name="country_lbl">país</string>
    <string name="save_lbl">guardar</string>
    <string name="messages_lbl">mensajes</string>
    <string name="save_to_wallet_lbl">guardar en monedero</string>
    <string name="account_input">ingreso en cuenta</string>
    <string name="currency_send_lbl">ingreso anónimo en cuenta</string>
    <string name="currency_change_lbl">envío anónimo</string>
    <string name="check_lbl">comprobar</string>
    <string name="pref_title_dnie">votar con DNIe 3.0</string>
    <string name="pref_description_dnie">para poder votar con su DNI el teléfono debe disponer de NFC</string>
    <string name="can_dialog_caption">introduzca el CAN de su DNIe</string>
    <string name="amount_lbl">cantidad</string>
    <string name="pattern_lock_msg">emplear patrón de bloqueo en vez de contraseña en la firma de documentos</string>
    <string name="pattern_lock_lbl">patrón de bloqueo</string>
</resources>