<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <SwitchPreference
        android:defaultValue="true"
        android:key="dnie_switch"
        android:summary="@string/pref_description_dnie"
        android:title="@string/pref_title_dnie" />

    <Preference android:title="@string/address_lbl"
        android:key="addressButton"/>

    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/pattern_lock_lbl"
        android:summary="@string/pattern_lock_msg"
        android:key="patternLockSwitch"/>

    <Preference android:title="@string/user_cert_lbl"
        android:key="requestCertButton"
        android:summary="@string/request_certificate_menu"/>

    <Preference android:title="@string/change_pin"
        android:key="changePinButton"/>

    <Preference android:title="@string/about_msg"
        android:key="aboutAppButton"/>

</PreferenceScreen>
