<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vs="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/connect"
        android:orderInCategory="1"
        android:icon="@drawable/fa_plug_16_ffffff"
        vs:showAsAction="always"
        android:title="@string/connect_lbl"/>

    <item android:id="@+id/update_currency_accounts"
        android:orderInCategory="1"
        vs:showAsAction="never"
        android:title="@string/update_signers_info_lbl"/>


    <item android:id="@+id/menu_debug"
        android:title="@string/description_debug"
        android:orderInCategory="19"
        vs:showAsAction="never" />

    <item
        android:id="@+id/close_app"
        android:orderInCategory="20"
        vs:showAsAction="never"
        android:title="@string/close_app_lbl"/>

</menu>