<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vs="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/polls_lbl">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/elections"
                android:icon="@drawable/poll_32"
                android:title="@string/polls_lbl" />
        </menu>
    </item>

    <group android:id="@+id/voting_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/fa_qrcode"
            android:icon="@drawable/fa_qrcode_32"
            android:title="@string/qr_codes_lbl" />
        <item
            android:id="@+id/receipts"
            android:icon="@drawable/fa_cert_32"
            android:title="@string/receipts_lbl" />
    </group>

    <group android:id="@+id/voting_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/navdrawer_item_settings" />
    </group>

</menu>