<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vs="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search_item"
          android:title="@string/searchLabel"
          vs:showAsAction="always"
          android:orderInCategory="0"
          android:icon="@android:drawable/ic_menu_search"
          android:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/update"
        android:orderInCategory="1"
        vs:showAsAction="never"
        android:title="@string/update_lbl"/>

    <item android:id="@+id/select_voting_service"
        android:orderInCategory="1"
        vs:showAsAction="never"
        android:title="@string/select_voting_service"/>

    <item android:id="@+id/menu_debug"
        android:title="@string/description_debug"
        android:orderInCategory="19"
        vs:showAsAction="never" />

</menu> 
