<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject_lbl"
                android:imeActionLabel="@string/given_name_lbl"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/request_button"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.design.widget.TextInputLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/amount"
                    android:layout_width="150dp"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount_lbl"
                    android:imeActionLabel="@string/given_name_lbl"
                    android:imeOptions="actionNext"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center"/>
            </android.support.design.widget.TextInputLayout>
            <Spinner android:id="@+id/currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/currency_codes"
                android:prompt="@string/currency_prompt"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_dark"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/payment_options_lbl"
                android:gravity="center"
                android:textSize="17sp" />
            <CheckBox android:id="@+id/from_user_checkbox"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@color/grey_dark"
                android:text="@string/account_input"/>

            <CheckBox android:id="@+id/currency_send_checkbox"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@color/grey_dark"
                android:text="@string/currency_send_lbl"/>

            <CheckBox android:id="@+id/currency_change_checkbox"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@color/grey_dark"
                android:text="@string/currency_change_lbl"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView android:id="@+id/tag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/add_tag_lbl"
                android:gravity="center"
                android:textSize="17sp" />
            <Button android:id="@+id/add_tag_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:text="@string/add_tag_lbl" />
        </LinearLayout>


        <Button android:id="@+id/request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/accept_16"
            android:text="@string/qr_create_lbl"
            android:textStyle="bold"
            android:layout_gravity="right" />

    </LinearLayout>
</ScrollView>